--- a/src/main/resources/templates/patientReview.html
+++ b/src/main/resources/templates/patientReview.html
@@ -68,7 +68,16 @@
 						<p>Please fill in this Review form to help us Improve our
 							System</p>
 						<hr>
-						<label style="color: black">Doctor</label><br>
+						<label style="color: black">Doctors's Name</label><br>
+                        <div class="form-group">
+                            <div>
+                                <input type="text" class="form-control" id="docName" name="name"
+                                    placeholder="Name" required="required">
+                                <div id="validationServer03Feedback" class="invalid-feedback">
+                                    Please provide a valid Name.</div>
+                            </div>
+                            
+                        <label style="color: black" >Doctor's Specification</label><br>
 						<div class="form-group">
 							<select class="form-control" name="specialization"
 								id="docSpecialization">
