--- a/src/main/resources/templates/receptionistDashboard.html
+++ b/src/main/resources/templates/receptionistDashboard.html
@@ -24,7 +24,7 @@
 				App</span>
 		</div>
 		<ul class="nav-links">
-			<li><a href="#" class="active"> <i class='bx bx-grid-alt'></i>
+			<li><a th:href="@{/receptionist}" class="active"> <i class='bx bx-grid-alt'></i>
 					<span class="links_name">Dashboard</span>
 			</a></li>
 			<li><a href="#"> <i class='bx bx-box'></i> <span
