--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -74,7 +74,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Total Appointments</div>
-						<div class="number">50</div>
+						<div id="docTotalApp" class="number"></div>
 
 
 					</div>
@@ -83,7 +83,7 @@
 				<div class="box">
 					<div class="right-side">
 						<div class="box-topic">Appointment Scheduled</div>
-						<div class="number">38</div>
+						<div id="docTotalScheduled">38</div>
 
 					</div>
 
@@ -95,22 +95,21 @@
 
 			</div>
 
-
-			<div class="sales-boxes">
-				<div class="recent-sales box">
-					<div class="title">Patient List</div>
-					<div class="sales-details">
-						<ul class="details">
-							<li class="topic">Name</li>
-							<li><a href="#">Mrs.Verma</a></li>
-							<li><a href="#">Mr.Gupta</a></li>
-							<li><a href="#">Mr.Rawat</a></li>
-							<li><a href="#">Mrs.Shukla</a></li>
-							<li><a href="#">Mr.Singh</a></li>
-						</ul>
-					</div>
+		<div class="sales-boxes">
+			<div class="recent-sales box">
+				<div class="title">Patient List</div>
+				<div class="sales-details">
+					<ul class="details">
+						<li class="topic">Name</li>
+						<li><a href="#">Mrs.Verma</a></li>
+						<li><a href="#">Mr.Gupta</a></li>
+						<li><a href="#">Mr.Rawat</a></li>
+						<li><a href="#">Mrs.Shukla</a></li>
+						<li><a href="#">Mr.Singh</a></li>
+					</ul>
 				</div>
 			</div>
+		</div>
 	</section>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -120,6 +119,24 @@
 		
 	</script>
 	<script>
+	
+		document.addEventListener('DOMContentLoaded', () => {
+			const doctor = JSON.parse(localStorage.getItem('doctor'));
+			
+			fetch("http://localhost:8080/appointment/doctorId/" + doctor.doctorId, {
+				method: 'GET',
+				headers: {
+					'Content-Type': 'application/json'
+				}
+			})
+			.then(res => res.json())
+			.then(data => {
+				if(data.status){
+					document.getElementById("docTotalApp").innerHTML = parseInt(data.data.length);
+				}
+			})
+		});
+	
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
 		sidebarBtn.onclick = function() {
