admin dashboard changes

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -33,6 +33,9 @@
 	justify-content: flex-start;
 	gap: 24px;
 }
+.home-content .sales-boxes .top-sales{
+	margin-left: 21px;
+}
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -62,7 +65,7 @@
 				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
 			</div>
 			<div class="profile-details">
-				<img src="static/images/profile.jpg" alt=""> <span
+				<img src="/images/profile.jpg" alt=""> <span
 					class="admin_name">Admin</span> <i></i>
 			</div>
 		</nav>
@@ -90,15 +93,14 @@
 			</div>
 
 			<div class="sales-boxes">
-				<div class="recent-sales box">
+				<!-- <div class="recent-sales box">
 					<div class="title">Recent Appointments</div>
 					<div class="sales-details"></div>
 					<div class="button">
 						<a href="#">See All</a>
 					</div>
-				</div>
+				</div> -->
 				<div class="top-sales box">
-
 					<div class="title">Top Doctors</div>
 					<ul class="top-sales-details">
 						<li><span class="product">Dr Gulati</span> </a> <span
