--- a/src/main/resources/templates/adminLoginPage.html
+++ b/src/main/resources/templates/adminLoginPage.html
@@ -33,7 +33,7 @@
 								<div class="form-outline mb-2">
 									<label class="form-label" for="adminEmail">Email</label> <input
 										type="email" name="email" id="adminEmail"
-										class="form-control form-control-rg is-invalid"
+										class="form-control form-control-rg "
 										placeholder="Email" aria-describedby="adminEmailFeedback"
 										required="required" />
 									<div id="adminEmailFeedback" class="invalid-feedback">
@@ -44,7 +44,7 @@
 								<div class="form-outline mb-4">
 									<label class="form-label" for="adminPassword">Password</label>
 									<input type="password" name="password" id="adminPassword"
-										class="form-control form-control-rg is-invalid"
+										class="form-control form-control-rg"
 										placeholder="Password"
 										aria-describedby="adminPasswordFeedback" required="required" />
 									<div id="adminPasswordFeedback" class="invalid-feedback">
