--- a/src/main/resources/templates/adminRegistration.html
+++ b/src/main/resources/templates/adminRegistration.html
@@ -62,10 +62,10 @@
 	<section class="home-section">
 		<nav>
 			<div class="sidebar-button">
-				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Registration</span>
 			</div>
 			<div class="profile-details">
-				<img src="static/images/profile.jpg" alt=""> <span
+				<img src="/images/profile.jpg" alt=""> <span
 					class="admin_name">Admin</span> <i></i>
 			</div>
 		</nav>
