--- a/src/main/resources/templates/doctorAppointmentList.html
+++ b/src/main/resources/templates/doctorAppointmentList.html
@@ -59,11 +59,11 @@
 	<section class="home-section">
 		<nav>
 			<div class="sidebar-button">
-				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Appointment List</span>
 			</div>
 
 			<div class="profile-details">
-				<img src="static/images/profile.jpg" alt=""> <span
+				<img src="/images/profile.jpg" alt=""> <span
 					class="admin_name">Dr Gulati</span> <i></i>
 			</div>
 		</nav>
