--- a/src/main/resources/templates/doctorDashboard.html
+++ b/src/main/resources/templates/doctorDashboard.html
@@ -64,7 +64,7 @@
 			</div>
 
 			<div class="profile-details">
-				<img src="static/images/profile.jpg" alt=""> <span
+				<img src="/images/profile.jpg" alt=""> <span
 					class="admin_name">Dr Gulati</span> <i></i>
 			</div>
 		</nav>
