--- a/src/main/resources/templates/doctorProfile.html
+++ b/src/main/resources/templates/doctorProfile.html
@@ -52,11 +52,11 @@
 	<section class="home-section">
 		<nav>
 			<div class="sidebar-button">
-				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Profile</span>
 			</div>
 
 			<div class="profile-details">
-				<img src="static/images/profile.jpg" alt=""> <span class="admin_name"></span> <i></i>
+				<img src="/images/profile.jpg" alt=""> <span class="admin_name"></span> <i></i>
 			</div>
 		</nav>
 
