--- a/src/main/resources/templates/doctorPatientList.html
+++ b/src/main/resources/templates/doctorPatientList.html
@@ -60,11 +60,11 @@
 	<section class="home-section">
 		<nav>
 			<div class="sidebar-button">
-				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Dashboard</span>
+				<i class='bx bx-menu sidebarBtn'></i> <span class="dashboard">Patient List</span>
 			</div>
 
 			<div class="profile-details">
-				<img src="static/images/profile.jpg" alt=""> <span
+				<img src="/images/profile.jpg" alt=""> <span
 					class="admin_name">Dr. Gulati</span> <i></i>
 			</div>
 		</nav>
@@ -123,6 +123,8 @@
 		
 	</script>
 	<script>
+
+	
 		let sidebar = document.querySelector(".sidebar");
 		let sidebarBtn = document.querySelector(".sidebarBtn");
 		sidebarBtn.onclick = function() {
