--- a/src/main/resources/static/patientDash.css
+++ b/src/main/resources/static/patientDash.css
@@ -179,6 +179,10 @@ nav .profile-details i{
   position: relative;
   padding-top: 104px;
 }
+.home-section .home-content2{
+  position: relative;
+  padding-top: 50px;
+}
 .home-content .overview-boxes{
   display: flex;
   align-items: center;
