patient Dashboard updated

--- a/src/main/resources/templates/patientDashboard.html
+++ b/src/main/resources/templates/patientDashboard.html
@@ -169,51 +169,60 @@
 				<div class="top-sales box">
 					<div class="title">Top Doctors</div>
 					<table class="top-sales-details" onclick="dashboard()">
-						<tr>
-							<th class="product">Doctors</th>
-							<th class="product">Speciality</th>
-							<th class="product">Fees</th>
-						</tr>
-						<tr>
-							<td>Dr Joy</td>
-							<td>Dermatologist</td>
-							<td class="price">Rs.876</td>
-						</tr>
-						<tr>
-							<td>Dr Nikhar</td>
-							<td>Rheumatologist</td>
-							<td class="price">Rs.875</td>
-						</tr>
-						<tr>
-							<td>Dr Fatima</td>
-							<td>Child Specilist</td>
-							<td class="price">Rs.874</td>
-						</tr>
-						<tr>
-							<td>Dr Nidhi</td>
-							<td>Gastroenterologist</td>
-							<td class="price">Rs.873</td>
-						</tr>
-						<tr>
-							<td>Dr Aasaf</td>
-							<td>Cardiologist</td>
-							<td class="price">Rs.872</td>
-						</tr>
-						<tr>
-							<td>Dr Piyusha</td>
-							<td>Psychiatrist</td>
-							<td class="price">Rs.871</td>
-						</tr>
-						<tr>
-							<td>Dr Jayesh</td>
-							<td>General Physician</td>
-							<td class="price">Rs.870</td>
-						</tr>
-						<tr>
-							<td>Dr Krutika</td>
-							<td>General Physician</td>
-							<td class="price">Rs.869</td>
-						</tr>
+						 <tr>
+	                         <th class="product">Doctors</th>
+	                         <th class="product">Speciality</th>
+	                         <th class="product">Fees</th>
+	                         <th class="product">Status</th>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Joy</td>
+	                         <td>Dermatologist</td>
+	                         <td class="price">Rs.876</td>
+	                         <td>Active</td>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Nikhar</td>
+	                         <td>Rheumatologist</td>
+	                         <td class="price">Rs.875</td>
+	                         <td>Active</td>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Fatima</td>
+	                         <td>Child Specilist</td>
+	                         <td class="price">Rs.874</td>
+	                         <td>In-Active</td>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Nidhi</td>
+	                         <td>Gastroenterologist</td>
+	                         <td class="price">Rs.873</td>
+	                         <td>In-Active</td>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Aasaf</td>
+	                         <td>Cardiologist</td>
+	                         <td class="price">Rs.872</td>
+	                         <td>In-Active</td>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Piyusha</td>
+	                         <td>Psychiatrist</td>
+	                         <td class="price">Rs.871</td>
+	                         <td>Active</td>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Jayesh</td>
+	                         <td>General Physician</td>
+	                         <td class="price">Rs.870</td>
+	                         <td>Active</td>
+	                     </tr>
+	                     <tr>
+	                         <td>Dr Krutika</td>
+	                         <td>General Physician</td>
+	                         <td class="price">Rs.869</td>
+	                         <td>Active</td>
+	                     </tr>
 
 					</table>
 				</div>
